Fixed grid spacing

--- a/src/Components/Divider/o-Divider.scss
+++ b/src/Components/Divider/o-Divider.scss
@@ -5,6 +5,7 @@
 	font-size: 1rem;
     font-family: $ctaFont;
 	background: url('../../img/grid.svg') center, linear-gradient(80deg, #832D89 0%, #E82A4C 80%, #E82A4C 100%);
+	height: 20em;
 
 	&__title {
 		font-size: 1.5em;
